# Strutil

./: .gitattributes  .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  StrUtil.c  StrUtil.h  build.sh  config.h.in  configure  configure.ac  strutil.c  strutil.h  strutil_contains.c  strutil_endsWith.c  strutil_ends_with.c  strutil_indexOf.c  strutil_indexesOf.c  strutil_indices_of.c  strutil_insert.c  strutil_lcs.c  strutil_lowercase.c  strutil_remove.c  strutil_remove_each.c  strutil_replaceAll.c  strutil_replace_all.c  strutil_reverse.c  strutil_split.c  strutil_startsWith.c  strutil_substring.c  strutil_trim.c  strutil_uppercase.c
include/: StrUtil.h  strutil.h
src/: Makefile.am  Makefile.in  StrUtil.c  strutil_contains.c  strutil_endsWith.c  strutil_indexOf.c  strutil_indexesOf.c  strutil_lowercase.c  strutil_removeThese.c  strutil_replaceAll.c  strutil_split.c  strutil_startsWith.c  strutil_substring.c  strutil_trim.c  strutil_uppercase.c
tests/: Makefile  test_contains.c  test_ends_with.c  test_index_of.c  test_indices_of.c  test_insert.c  test_lcs.c  test_lowercase.c  test_remove.c  test_remove_each.c  test_replace_all.c  test_reverse.c  test_split.c  test_substring.c  test_trim.c  test_uppercase.c
