lib_LTLIBRARIES = libstrutil.la
libstrutil_la_SOURCES = strutil_contains.c \
                        strutil_endsWith.c \
                        strutil_indexesOf.c \
                        strutil_indexOf.c \
                        strutil_lowercase.c \
                        strutil_removeThese.c \
                        strutil_replaceAll.c \
                        strutil_split.c \
                        strutil_substring.c \
                        strutil_trim.c \
                        strutil_uppercase.c
libstrutil_la_CFLAGS = -pipe -march=native
libstrutil_la_CPPFLAGS = -I$(top_srcdir)/include

CC = clang
